Change dark mode icon, Fix: Sub-title now properly displays on ios safari

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -15,26 +15,32 @@
         margin-inline: 10px;
 
         span {
+            display: flex;
+            justify-content: center;
+            align-items: baseline;
+            width: fit-content;
             background-image: var(--title-background);
             background-clip: text;
             font-family: nyt-karnakcondensed;
-            font-size: 28px;
-            font-weight: 700;
-            vertical-align: middle;
-            white-space: nowrap;
-            letter-spacing: 0.01em;
             transition: background-image .25s;
+            gap: 5px;
             -webkit-text-fill-color: transparent;
 
-            sub {
-                display: inline-block;
-                font-size: 16px;
-                vertical-align: baseline;
+            p {
+                font-size: 28px;
+                font-weight: 700;
+                letter-spacing: .01em;
 
-                &::first-letter {
-                    font-size: 24px;
+                &.sub {
+                    font-size: 20px;
+
+                    &::first-letter {
+                        font-size: 28px;
+                    }
                 }
             }
+
+
         }
     }
 
@@ -61,10 +67,8 @@
         }
 
         .hard-mode {
-            width: 21px;
             font-size: 28px;
-            text-align: center;
-            vertical-align: middle;
+            transform: translateY(.5px);
         }
 
         .reset {
@@ -87,16 +91,18 @@
         }
 
         .title {
-            text-align: center;
-
             span {
-                font-size: 32px;
+                margin-inline: auto;
 
-                sub {
-                    font-size: 18px;
+                p {
+                    font-size: 32px;
 
-                    &::first-letter {
-                        font-size: 28px;
+                    &.sub {
+                        font-size: 24px;
+
+                        &::first-letter {
+                            font-size: 32px;
+                        }
                     }
                 }
             }
